--- a/packages/iftracer-sdk/pyproject.toml
+++ b/packages/iftracer-sdk/pyproject.toml
@@ -1,27 +1,18 @@
 [tool.coverage.run]
 branch = true
-source = [ "traceloop/sdk" ]
+source = [ "iftracer/sdk" ]
 
 [tool.coverage.report]
 exclude_lines = [ "if TYPE_CHECKING:" ]
 show_missing = true
 
 [tool.poetry]
-name = "traceloop-sdk"
-version = "0.25.6"
-description = "Traceloop Software Development Kit (SDK) for Python"
-authors = [
-  "Gal Kleinman <gal@traceloop.com>",
-  "Nir Gazit <nir@traceloop.com>",
-  "Tomer Friedman <tomer@traceloop.com>"
-]
-repository = "https://github.com/traceloop/openllmetry"
-documentation = "https://traceloop.com/docs/openllmetry"
-license = "Apache-2.0"
-readme = "README.md"
+name = "iftracer-sdk"
+version = "0.1.0"
+description = "Iftracer Software Development Kit (SDK) for Python"
 
 [[tool.poetry.packages]]
-include = "traceloop/sdk"
+include = "iftracer/sdk"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
