--- a/packages/iftracer-sdk/pyproject.toml
+++ b/packages/iftracer-sdk/pyproject.toml
@@ -16,7 +16,8 @@ authors = [
   "Tomer Friedman <tomer@traceloop.com>",
   "Zhixuan Zhou <zhixuan@insightfinder.com>"
 ]
-repository = "https://github.com/insightfinder/iftracer"
+repository = "https://github.com/traceloop/openllmetry"
+documentation = "https://traceloop.com/docs/openllmetry"
 license = "Apache-2.0"
 readme = "README.md"
 
@@ -33,28 +34,28 @@ opentelemetry-instrumentation-requests = "^0.46b0"
 opentelemetry-instrumentation-sqlalchemy = "^0.46b0"
 opentelemetry-instrumentation-urllib3 = "^0.46b0"
 opentelemetry-semantic-conventions-ai = "0.3.6"
-opentelemetry-instrumentation-mistralai = {path="../opentelemetry-instrumentation-mistralai", develop=true}
-opentelemetry-instrumentation-openai = {path="../opentelemetry-instrumentation-openai", develop=true}
-opentelemetry-instrumentation-ollama = {path="../opentelemetry-instrumentation-ollama", develop=true}
-opentelemetry-instrumentation-anthropic = {path="../opentelemetry-instrumentation-anthropic", develop=true}
-opentelemetry-instrumentation-cohere = {path="../opentelemetry-instrumentation-cohere", develop=true}
-opentelemetry-instrumentation-google-generativeai = {path="../opentelemetry-instrumentation-google-generativeai", develop=true}
-opentelemetry-instrumentation-pinecone = {path="../opentelemetry-instrumentation-pinecone", develop=true}
-opentelemetry-instrumentation-qdrant = {path="../opentelemetry-instrumentation-qdrant", develop=true}
-opentelemetry-instrumentation-langchain = {path="../opentelemetry-instrumentation-langchain", develop=true}
-opentelemetry-instrumentation-chromadb = {path="../opentelemetry-instrumentation-chromadb", develop=true}
-opentelemetry-instrumentation-transformers = {path="../opentelemetry-instrumentation-transformers", develop=true}
-opentelemetry-instrumentation-together = {path="../opentelemetry-instrumentation-together", develop=true}
-opentelemetry-instrumentation-llamaindex = {path="../opentelemetry-instrumentation-llamaindex", develop=true}
-opentelemetry-instrumentation-milvus = {path="../opentelemetry-instrumentation-milvus", develop=true}
-opentelemetry-instrumentation-haystack = {path="../opentelemetry-instrumentation-haystack", develop=true}
-opentelemetry-instrumentation-bedrock = {path="../opentelemetry-instrumentation-bedrock", develop=true}
-opentelemetry-instrumentation-replicate = {path="../opentelemetry-instrumentation-replicate", develop=true}
-opentelemetry-instrumentation-vertexai = {path="../opentelemetry-instrumentation-vertexai", develop=true}
-opentelemetry-instrumentation-watsonx = {path="../opentelemetry-instrumentation-watsonx", develop=true}
-opentelemetry-instrumentation-weaviate = {path="../opentelemetry-instrumentation-weaviate", develop=true}
-opentelemetry-instrumentation-alephalpha = {path="../opentelemetry-instrumentation-alephalpha", develop=true}
-opentelemetry-instrumentation-marqo = {path="../opentelemetry-instrumentation-marqo", develop=true}
+opentelemetry-instrumentation-mistralai = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-mistralai" }
+opentelemetry-instrumentation-openai = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-openai" }
+opentelemetry-instrumentation-ollama = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-ollama" }
+opentelemetry-instrumentation-anthropic = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-anthropic" }
+opentelemetry-instrumentation-cohere = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-cohere" }
+opentelemetry-instrumentation-google-generativeai = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-google-generativeai" }
+opentelemetry-instrumentation-pinecone = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-pinecone" }
+opentelemetry-instrumentation-qdrant = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-qdrant" }
+opentelemetry-instrumentation-langchain = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-langchain" }
+opentelemetry-instrumentation-chromadb = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-chromadb" }
+opentelemetry-instrumentation-transformers = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-transformers" }
+opentelemetry-instrumentation-together = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-together" }
+opentelemetry-instrumentation-llamaindex = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-llamaindex" }
+opentelemetry-instrumentation-milvus = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-milvus" }
+opentelemetry-instrumentation-haystack = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-haystack" }
+opentelemetry-instrumentation-bedrock = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-bedrock" }
+opentelemetry-instrumentation-replicate = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-replicate" }
+opentelemetry-instrumentation-vertexai = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-vertexai" }
+opentelemetry-instrumentation-watsonx = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-watsonx" }
+opentelemetry-instrumentation-weaviate = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-weaviate" }
+opentelemetry-instrumentation-alephalpha = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-alephalpha" }
+opentelemetry-instrumentation-marqo = { git = "https://github.com/insightfinder/iftracer.git", subdirectory = "packages/opentelemetry-instrumentation-marqo" }
 colorama = "^0.4.6"
 tenacity = "^8.2.3"
 pydantic = ">=1"
