--- a/packages/opentelemetry-instrumentation-openai/tests/traces/cassettes/test_azure/test_chat_content_filtering.yaml
+++ b/packages/opentelemetry-instrumentation-openai/tests/traces/cassettes/test_azure/test_chat_content_filtering.yaml
@@ -2,7 +2,7 @@ interactions:
   - request:
       body:
         '{"messages": [{"role": "user", "content": "Tell me a joke about opentelemetry"}],
-        "model": "ifllmetry-testing"}'
+        "model": "openllmetry-testing"}'
       headers:
         accept:
           - application/json
@@ -33,7 +33,7 @@ interactions:
         x-stainless-runtime-version:
           - 3.12.1
       method: POST
-      uri: https://traceloop-stg.openai.azure.com//openai/deployments/ifllmetry-testing/chat/completions?api-version=2024-02-01
+      uri: https://traceloop-stg.openai.azure.com//openai/deployments/openllmetry-testing/chat/completions?api-version=2024-02-01
     response:
       body:
         string:
