--- a/packages/iftracer-sdk/pyproject.toml
+++ b/packages/iftracer-sdk/pyproject.toml
@@ -26,6 +26,7 @@ include = "iftracer/sdk"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<4"
+aiohttp = "3.11.7"
 opentelemetry-api = "^1.25.0"
 opentelemetry-sdk = "^1.25.0"
 opentelemetry-exporter-otlp-proto-http = "^1.25.0"
@@ -42,7 +43,8 @@ opentelemetry-instrumentation-cohere = { git = "https://github.com/insightfinder
 opentelemetry-instrumentation-google-generativeai = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-google-generativeai" }
 opentelemetry-instrumentation-pinecone = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-pinecone" }
 opentelemetry-instrumentation-qdrant = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-qdrant" }
-opentelemetry-instrumentation-langchain = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-langchain" }
+opentelemetry-instrumentation-langchain = { path = "/home/zhixuan/vscodes/ifllmetry/packages/opentelemetry-instrumentation-langchain", develop = true }
+
 opentelemetry-instrumentation-chromadb = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-chromadb" }
 opentelemetry-instrumentation-transformers = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-transformers" }
 opentelemetry-instrumentation-together = { git = "https://github.com/insightfinder/ifllmetry.git", subdirectory = "packages/opentelemetry-instrumentation-together" }
