--- a/packages/opentelemetry-instrumentation-langchain/pyproject.toml
+++ b/packages/opentelemetry-instrumentation-langchain/pyproject.toml
@@ -7,7 +7,7 @@ exclude_lines = ['if TYPE_CHECKING:']
 show_missing = true
 
 [tool.poetry]
-name = "opentelemetry-instrumentation-langchain"
+name = "opentelemetry-if-instrumentation-langchain"
 version = "0.25.6"
 description = "OpenTelemetry Langchain instrumentation"
 authors = [
@@ -15,7 +15,7 @@ authors = [
   "Nir Gazit <nir@traceloop.com>",
   "Tomer Friedman <tomer@traceloop.com>"
 ]
-repository = "https://github.com/traceloop/openllmetry/tree/main/packages/opentelemetry-instrumentation-langchain"
+repository = "https://github.com/insightfinder/ifllmetry/tree/main/packages/opentelemetry-instrumentation-langchain"
 license = "Apache-2.0"
 readme = "README.md"
 
@@ -27,7 +27,7 @@ python = ">=3.9,<4"
 opentelemetry-api = "^1.25.0"
 opentelemetry-instrumentation = "^0.46b0"
 opentelemetry-semantic-conventions = "^0.46b0"
-opentelemetry-semantic-conventions-ai = "0.3.6"
+opentelemetry-if-semantic-conventions-ai = "0.3.6"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.2.0"
@@ -46,8 +46,8 @@ vcrpy = "^6.0.1"
 pytest-recording = "^0.13.1"
 pytest-asyncio = "^0.23.7"
 opentelemetry-sdk = "^1.23.0"
-opentelemetry-instrumentation-openai = {path="../opentelemetry-instrumentation-openai", develop=true}
-opentelemetry-instrumentation-bedrock = {path="../opentelemetry-instrumentation-bedrock", develop=true}
+opentelemetry-if-instrumentation-openai = "==0.25.6"
+opentelemetry-if-instrumentation-bedrock = "==0.25.6"
 text-generation = "^0.7.0"
 anthropic = ">=0.23,<0.29"
 boto3 = "^1.34.120"
