--- a/packages/opentelemetry-instrumentation-llamaindex/pyproject.toml
+++ b/packages/opentelemetry-instrumentation-llamaindex/pyproject.toml
@@ -7,7 +7,7 @@ exclude_lines = ['if TYPE_CHECKING:']
 show_missing = true
 
 [tool.poetry]
-name = "opentelemetry-instrumentation-llamaindex"
+name = "opentelemetry-if-instrumentation-llamaindex"
 version = "0.25.6"
 description = "OpenTelemetry LlamaIndex instrumentation"
 authors = [
@@ -15,7 +15,7 @@ authors = [
   "Nir Gazit <nir@traceloop.com>",
   "Tomer Friedman <tomer@traceloop.com>"
 ]
-repository = "https://github.com/traceloop/openllmetry/tree/main/packages/opentelemetry-instrumentation-llamaindex"
+repository = "https://github.com/insightfinder/ifllmetry/tree/main/packages/opentelemetry-instrumentation-llamaindex"
 license = "Apache-2.0"
 readme = "README.md"
 
@@ -27,7 +27,7 @@ python = ">=3.9,<4"
 opentelemetry-api = "^1.25.0"
 opentelemetry-instrumentation = "^0.46b0"
 opentelemetry-semantic-conventions = "^0.46b0"
-opentelemetry-semantic-conventions-ai = "0.3.6"
+opentelemetry-if-semantic-conventions-ai = "0.3.6"
 inflection = "^0.5.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -43,9 +43,9 @@ openai = "^1.35.0"
 opentelemetry-sdk = "^1.23.0"
 llama-index = "^0.10.46"
 llama-index-postprocessor-cohere-rerank = "^0.1.7"
-opentelemetry-instrumentation-openai = {path="../opentelemetry-instrumentation-openai", develop=true}
-opentelemetry-instrumentation-cohere = {path="../opentelemetry-instrumentation-cohere", develop=true}
-opentelemetry-instrumentation-chromadb = {path="../opentelemetry-instrumentation-chromadb", develop=true}
+opentelemetry-if-instrumentation-openai = "==0.25.6"
+opentelemetry-if-instrumentation-cohere = "==0.25.6"
+opentelemetry-if-instrumentation-chromadb = "==0.25.6"
 sqlalchemy = "^2.0.31"
 llama-index-agent-openai = ">=0.2.7,<0.3.0"
 llama-index-vector-stores-chroma = "^0.1.9"
