--- a/packages/opentelemetry-instrumentation-pinecone/pyproject.toml
+++ b/packages/opentelemetry-instrumentation-pinecone/pyproject.toml
@@ -7,7 +7,7 @@ exclude_lines = [ "if TYPE_CHECKING:" ]
 show_missing = true
 
 [tool.poetry]
-name = "opentelemetry-instrumentation-pinecone"
+name = "opentelemetry-if-instrumentation-pinecone"
 version = "0.25.6"
 description = "OpenTelemetry Pinecone instrumentation"
 authors = [
@@ -15,7 +15,7 @@ authors = [
   "Nir Gazit <nir@traceloop.com>",
   "Tomer Friedman <tomer@traceloop.com>"
 ]
-repository = "https://github.com/traceloop/openllmetry/tree/main/packages/opentelemetry-instrumentation-pinecone"
+repository = "https://github.com/insightfinder/ifllmetry/tree/main/packages/opentelemetry-instrumentation-pinecone"
 license = "Apache-2.0"
 readme = "README.md"
 
@@ -27,7 +27,7 @@ python = ">=3.9,<4"
 opentelemetry-api = "^1.25.0"
 opentelemetry-instrumentation = "^0.46b0"
 opentelemetry-semantic-conventions = "^0.46b0"
-opentelemetry-semantic-conventions-ai = "0.3.6"
+opentelemetry-if-semantic-conventions-ai = "0.3.6"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.2.0"
@@ -42,7 +42,7 @@ pytest-sugar = "1.0.0"
 vcrpy = "^6.0.1"
 pytest-recording = "^0.13.1"
 opentelemetry-sdk = "^1.23.0"
-opentelemetry-instrumentation-openai = {path="../opentelemetry-instrumentation-openai", develop=true}
+opentelemetry-if-instrumentation-openai = "==0.25.6"
 pinecone-client = "^4.1.0"
 
 [build-system]
