--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,49 +4,49 @@ on:
     workflow_dispatch:
 
 jobs:
-  bump-version:
-    runs-on: ubuntu-latest
+  # bump-version:
+  #   runs-on: ubuntu-latest
 
-    outputs:
-      new_version: ${{ steps.cz.outputs.version }}
+  #   outputs:
+  #     new_version: ${{ steps.cz.outputs.version }}
 
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          fetch-depth: 0
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         persist-credentials: false
+  #         fetch-depth: 0
 
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v5
-        with:
-          python-version: 3.11
+  #     - name: Set up Python 3.11
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: 3.11
 
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+  #     - name: Install Poetry
+  #       uses: snok/install-poetry@v1
 
-      - id: cz
-        name: Bump Version, Create Tag and Changelog
-        uses: commitizen-tools/commitizen-action@master
-        with:
-          github_token: ${{ secrets.GH_ACCESS_TOKEN }}
-          changelog_increment_filename: body.md
+  #     - id: cz
+  #       name: Bump Version, Create Tag and Changelog
+  #       uses: commitizen-tools/commitizen-action@master
+  #       with:
+  #         github_token: ${{ secrets.GH_ACCESS_TOKEN }}
+  #         changelog_increment_filename: body.md
 
-      - name: Create Release
-        uses: softprops/action-gh-release@v2
-        with:
-          body_path: "body.md"
-          tag_name: ${{ env.REVISION }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
+  #     - name: Create Release
+  #       uses: softprops/action-gh-release@v2
+  #       with:
+  #         body_path: "body.md"
+  #         tag_name: ${{ env.REVISION }}
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
 
-      - name: Print Version
-        run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+  #     - name: Print Version
+  #       run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
 
 
   release-instrumentations:
     runs-on: ubuntu-latest
-    needs:
-      - bump-version
+    # needs:
+    #   - bump-version
     permissions:
       id-token: write
     steps:
